# ElderCareVision

./: .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  Project Overview.md  README.md  install.bat  pyproject.toml  requirements.txt
.cursor/rules/: python-rules.mdc
docs/: sequence_diagram.puml
src/elder_care_vision/: __init__.py  main.py  test_audio.py  test_openai.py
src/elder_care_vision/config/: config.json  logging.yaml  logging_config.py
src/elder_care_vision/core/: coordinator.py
src/elder_care_vision/core/agents/: base_agent.py  health_status_inquiry.py  health_status_voice_workflow.py  person_state_analyzer.py  psa_data.py
src/elder_care_vision/core/tools/: emergency_call.py  fall_camera_detector.py
src/elder_care_vision/core/tools/emergency_call/: adb_phone_call_manager.py  emergency_call.py  img_analizer.py
src/elder_care_vision/core/tools/emergency_call/tests/: test_adb_phone_call_manager.py
src/elder_care_vision/emengencyCall/: emergency_call.py
src/elder_care_vision/oopsie_controller/: __init__.py  dev_test.py  main.py  oopsie_controller.py  test_main.py
src/elder_care_vision/oopsie_controller/config/: thresholds.json
src/elder_care_vision/oopsie_controller/docs/: README.md  sequence_diagram.puml
src/elder_care_vision/oopsie_controller/oopsie_alert/: README.md  __init__.py  oopsie_alert.py
src/elder_care_vision/oopsie_controller/oopsie_nanny/: __init__.py  oopsie_nanny.py
src/elder_care_vision/services/: openai_service.py
src/elder_care_vision/utils/: utils.py
src/elder_care_vision/web/: app.py
src/elder_care_vision/web/templates/: index.html
src/reolinkApi/: reolink_api.py
tools/: rtsp_recorder.py
